--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -36,7 +36,7 @@ jobs:
     - name: 🔨 Install dependencies
       run: |
         cd api
-        npm install
+        npm install --production
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.2.0
