--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "knexseed": "knex seed:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.5",
     "dotenv": "^14.2.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "knex": "^1.0.1",
+    "mysql2": "^2.3.3",
+    "objection": "^3.0.1",
+    "pupa": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
