--- a/api/package.json
+++ b/api/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "knexseed": "knex seed:run"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ckey": "^1.0.3",
     "cross-fetch": "^3.1.5",
-    "dotenv": "^14.2.0",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
+    "prompt": "^1.2.1",
     "pupa": "^3.1.0"
   },
   "devDependencies": {
